# TheGreatEbay

./: .gitignore  README.md  config.py  pyproject.toml  runner.py
app/: __init__.py  models.py
app/api/: product_api.py  user_api.py
app/forms/: authorization.py  edit_profile.py
app/routes/: auth.py  main_route.py  routes_utils.py
app/static/css/: general.css  main.css  product.css  profile.css
app/static/js/: api_methods.js  cart.js  cookie_utils.js  edit-profile.js  product.js  profiletoggler.js  render_products.js
app/templates/: base.html  cart.html  index.html  product.html  profile.html
migrations/versions/: 0e7f73122076_added_cart_v2.py  2f6e352363bb_.py  3456be479281_refactor.py  756c02dd8a3e_.py  81c40ffe80d1_added_cart.py  d2bf97c63b24_initial_migration.py  d9ad41639821_added_product_picture.py
