[tool.poetry]
name = "thegreatebay"
version = "0.1.0"
description = ""
authors = ["Irishery <markirill21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
python-dotenv = "^0.19.2"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
